--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
   "author": "David Zukowski <david@zuko.me> (http://zuko.me)",
   "license": "MIT",
   "dependencies": {
+    "axios": "0.15.2",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.14.0",
@@ -88,12 +89,14 @@
     "debug": "^2.2.0",
     "extract-text-webpack-plugin": "^1.0.0",
     "file-loader": "^0.9.0",
+    "flow-interfaces": "0.6.1",
     "fs-extra": "^0.30.0",
     "html-webpack-plugin": "^2.22.0",
     "imports-loader": "^0.6.5",
     "ip": "^1.1.2",
     "json-loader": "^0.5.4",
-    "node-sass": "^3.7.0",
+    "material-ui": "0.16.0",
+    "node-sass": "3.10.1",
     "normalize.css": "^4.1.1",
     "postcss-loader": "^0.13.0",
     "react": "^15.0.0",
@@ -101,6 +104,8 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.8.0",
     "redux": "^3.6.0",
+    "redux-logger": "2.7.0",
+    "redux-promise-middleware": "4.1.0",
     "redux-thunk": "^2.0.0",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.0",
@@ -124,10 +129,13 @@
     "eslint-config-standard": "^6.0.0",
     "eslint-config-standard-react": "^4.0.0",
     "eslint-plugin-babel": "^3.2.0",
+    "eslint-plugin-flow-vars": "0.5.0",
     "eslint-plugin-promise": "^2.0.0",
     "eslint-plugin-react": "^6.0.0",
     "eslint-plugin-standard": "^2.0.0",
     "express": "^4.14.0",
+    "flow-bin": "0.33.0",
+    "flow-interfaces": "0.6.1",
     "karma": "^1.0.0",
     "karma-coverage": "^1.0.0",
     "karma-mocha": "^1.0.1",
